prevent hover content display on mobile

--- a/src/app/(default)/GalleryItem.module.css
+++ b/src/app/(default)/GalleryItem.module.css
@@ -56,6 +56,14 @@
 }
 
 @media only screen and (max-width: 880px) {
+  .container {
+    gap: 0px;
+  }
+
+  .container:hover .hoverContentWrapper {
+    display: none !important;
+  }
+
   .mobileContentWrapper {
     display: flex !important;
   }
